syntax = "proto3";

package nighthawk.client;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "envoy/config/core/v3/base.proto";

import "api/client/options.proto";

message Counter {
  string name = 1;
  uint64 value = 2;
}

message Percentile {
  oneof duration_type {
    google.protobuf.Duration duration = 1;
    double raw_value = 4;
  }
  double percentile = 2;
  uint64 count = 3;
}

message Statistic {
  uint64 count = 1;
  string id = 2;
  oneof mean_type {
    google.protobuf.Duration mean = 3;
    double raw_mean = 8;
  }
  oneof pstdev_type {
    google.protobuf.Duration pstdev = 4;
    double raw_pstdev = 10;
  }
  repeated Percentile percentiles = 5;
  oneof min_type {
    google.protobuf.Duration min = 6;
    uint64 raw_min = 12;
  }
  oneof max_type {
    google.protobuf.Duration max = 7;
    uint64 raw_max = 13;
  }
}

message Result {
  string name = 1;
  repeated Statistic statistics = 2;
  repeated Counter counters = 3;
  google.protobuf.Duration execution_duration = 4;
  google.protobuf.Timestamp execution_start = 5;
}

message Output {
  google.protobuf.Timestamp timestamp = 1;
  nighthawk.client.CommandLineOptions options = 2;
  repeated Result results = 3;
  envoy.config.core.v3.BuildVersion version = 4;
}
